<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_lugares"
            android:icon="@drawable/lugares"
            android:title="@string/lugares_tur_sticos" />
        <item
            android:id="@+id/nav_mapas"
            android:icon="@drawable/mapas"
            android:title="@string/mapas" />
        <item
            android:id="@+id/nav_configuracion"
            android:icon="@drawable/configuracion"
            android:title="@string/config" />
        <item
            android:id="@+id/nav_salir"
            android:icon="@drawable/salir"
            android:title="@string/salir" />
    </group>
</menu>